--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "guadaltech",
-  "version": "1.0.0",
-  "description": "proyecto para contemplar la candidatura",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Adrián Dávila Guerra",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^9.0.2",
-    "express": "^4.17.1",
-    "express-validator": "^6.11.1",
-    "mongoose": "^5.12.8"
-  }
+    "name": "guadaltech",
+    "version": "1.0.0",
+    "description": "proyecto para contemplar la candidatura",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node index.js"
+    },
+    "author": "Adrián Dávila Guerra",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^9.0.2",
+        "express": "^4.17.1",
+        "express-validator": "^6.11.1",
+        "mongoose": "^5.12.8"
+    }
 }
