--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "dotenv": "^9.0.2",
         "express": "^4.17.1",
         "express-validator": "^6.11.1",
+        "express-validators": "^1.0.4",
         "mongoose": "^5.12.8"
     }
 }
